Added error handling to all plots

--- a/src/3-scatter-plot.ipynb
+++ b/src/3-scatter-plot.ipynb
@@ -24,28 +24,34 @@
     }
    ],
    "source": [
-    "# TASK: Create a scatter plot with x = [1, 2, 3, 4, 5] and y = [2, 4, 6, 8, 10].\n",
-    "# Annotate each point with its (x, y) value, and set the title as 'Scatter Plot with Annotations'.\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Data\n",
     "x = [1, 2, 3, 4, 5]\n",
     "y = [2, 4, 6, 8, 10]\n",
     "\n",
-    "# Create scatter plot\n",
-    "plt.scatter(x, y, color='blue', marker='o')\n",
+    "try:\n",
+    "    if len(x) != len(y):\n",
+    "        raise ValueError(\"X and Y must have the same length\")\n",
+    "    if not all(isinstance(i, (int, float)) for i in x + y):\n",
+    "        raise TypeError(\"X and Y values must be numeric\")\n",
     "\n",
-    "# Annotate each point\n",
-    "for i in range(len(x)):\n",
-    "    plt.annotate(f\"({x[i]}, {y[i]})\", (x[i], y[i]), textcoords=\"offset points\", xytext=(5,5), ha='center')\n",
+    "    # Create scatter plot\n",
+    "    plt.scatter(x, y, color='blue', marker='o')\n",
     "\n",
-    "# Customizations\n",
-    "plt.title(\"Scatter Plot with Annotations\")  # Add title\n",
-    "plt.xlabel(\"X values\")  # X-axis label\n",
-    "plt.ylabel(\"Y values\")  # Y-axis label\n",
+    "    # Annotate each point\n",
+    "    for i in range(len(x)):\n",
+    "        plt.annotate(f\"({x[i]}, {y[i]})\", (x[i], y[i]), textcoords=\"offset points\", xytext=(5, 5), ha='center')\n",
     "\n",
-    "# Show the plot\n",
-    "plt.show()\n"
+    "    # Customizations\n",
+    "    plt.title(\"Scatter Plot with Annotations\")\n",
+    "    plt.xlabel(\"X values\")\n",
+    "    plt.ylabel(\"Y values\")\n",
+    "\n",
+    "    # Show the plot\n",
+    "    plt.show()\n",
+    "except Exception as e:\n",
+    "    print(f\"Error: {e}\")\n"
    ]
   }
  ],
