--- a/src/6-histogram.ipynb
+++ b/src/6-histogram.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -24,23 +24,29 @@
     }
    ],
    "source": [
-    "# TASK: Create a histogram for the following data: data = [1, 2, 2, 3, 3, 3, 4, 4, 4, 4, 5].\n",
-    "# Customize the histogram with a title, labels for the x-axis, and a specific color for the bars.\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Data\n",
     "data = [1, 2, 2, 3, 3, 3, 4, 4, 4, 4, 5]\n",
     "\n",
-    "# Create histogram\n",
-    "plt.hist(data, bins=5, color='skyblue', edgecolor='black')  \n",
+    "try:\n",
+    "    if not data:\n",
+    "        raise ValueError(\"Data list is empty\")\n",
+    "    if not all(isinstance(i, (int, float)) for i in data):\n",
+    "        raise TypeError(\"Data values must be numeric\")\n",
     "\n",
-    "# Customizations\n",
-    "plt.title(\"Histogram of Data\")  # Add title\n",
-    "plt.xlabel(\"Values\")  # X-axis label\n",
-    "plt.ylabel(\"Frequency\")  # Y-axis label\n",
+    "    # Create histogram\n",
+    "    plt.hist(data, bins=5, color='skyblue', edgecolor='black')\n",
     "\n",
-    "# Show the plot\n",
-    "plt.show()\n"
+    "    # Customizations\n",
+    "    plt.title(\"Histogram of Data\")\n",
+    "    plt.xlabel(\"Values\")\n",
+    "    plt.ylabel(\"Frequency\")\n",
+    "\n",
+    "    # Show the plot\n",
+    "    plt.show()\n",
+    "except Exception as e:\n",
+    "    print(f\"Error: {e}\")\n"
    ]
   }
  ],
