--- a/src/1-line-plot.ipynb
+++ b/src/1-line-plot.ipynb
@@ -24,27 +24,31 @@
     }
    ],
    "source": [
-    "# TASK: Create a line plot with x values ranging from 0 to 10 and y values as the square of x.\n",
-    "# Customize the plot by adding a title, labels for both axes, and a grid.\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Define x values from 0 to 10\n",
-    "x = np.linspace(0, 10, 100)\n",
-    "y = x**2  # Square of x\n",
+    "try:\n",
+    "    x = np.linspace(0, 10, 100)\n",
+    "    if x.size == 0:\n",
+    "        raise ValueError(\"X values array is empty\")\n",
     "\n",
-    "# Create a line plot\n",
-    "plt.plot(x, y, label='y = x^2', color='b')\n",
+    "    y = x**2  # Square of x\n",
     "\n",
-    "# Customizations\n",
-    "plt.title(\"Line Plot of y = x²\")  # Title\n",
-    "plt.xlabel(\"X values\")  # X-axis label\n",
-    "plt.ylabel(\"Y values\")  # Y-axis label\n",
-    "plt.grid(True)  # Enable grid\n",
-    "plt.legend()  # Show legend\n",
+    "    # Create a line plot\n",
+    "    plt.plot(x, y, label='y = x^2', color='b')\n",
     "\n",
-    "# Show the plot\n",
-    "plt.show()"
+    "    # Customizations\n",
+    "    plt.title(\"Line Plot of y = x²\")\n",
+    "    plt.xlabel(\"X values\")\n",
+    "    plt.ylabel(\"Y values\")\n",
+    "    plt.grid(True)\n",
+    "    plt.legend()\n",
+    "\n",
+    "    # Show the plot\n",
+    "    plt.show()\n",
+    "except Exception as e:\n",
+    "    print(f\"Error: {e}\")\n"
    ]
   }
  ],
