--- a/src/2-bar-plot.ipynb
+++ b/src/2-bar-plot.ipynb
@@ -24,25 +24,30 @@
     }
    ],
    "source": [
-    "# TASK: Create a bar plot with the following data: categories = ['A', 'B', 'C', 'D'] and values = [5, 7, 3, 9].\n",
-    "# Use different colors for each bar and add a title to the plot.\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Data\n",
     "categories = ['A', 'B', 'C', 'D']\n",
     "values = [5, 7, 3, 9]\n",
-    "colors = ['red', 'blue', 'green', 'purple']  # Different colors for each bar\n",
     "\n",
-    "# Create bar plot\n",
-    "plt.bar(categories, values, color=colors)\n",
+    "try:\n",
+    "    if len(categories) != len(values):\n",
+    "        raise ValueError(\"Categories and values must have the same length\")\n",
+    "    if not categories or not values:\n",
+    "        raise ValueError(\"Categories and values cannot be empty\")\n",
     "\n",
-    "# Customizations\n",
-    "plt.title(\"Bar Plot of Categories\")  # Add title\n",
-    "plt.xlabel(\"Categories\")  # X-axis label\n",
-    "plt.ylabel(\"Values\")  # Y-axis label\n",
+    "    # Create bar plot\n",
+    "    plt.bar(categories, values, color=['red', 'blue', 'green', 'purple'])\n",
     "\n",
-    "# Show the plot\n",
-    "plt.show()\n"
+    "    # Customizations\n",
+    "    plt.title(\"Bar Plot of Categories\")\n",
+    "    plt.xlabel(\"Categories\")\n",
+    "    plt.ylabel(\"Values\")\n",
+    "\n",
+    "    # Show the plot\n",
+    "    plt.show()\n",
+    "except Exception as e:\n",
+    "    print(f\"Error: {e}\")\n"
    ]
   }
  ],
