--- a/src/4-pie-chart.ipynb
+++ b/src/4-pie-chart.ipynb
@@ -24,23 +24,28 @@
     }
    ],
    "source": [
-    "# TASK: Create a pie chart with the following data: labels = ['Python', 'Java', 'C++', 'JavaScript'] and sizes = [40, 25, 20, 15].\n",
-    "# Display the percentages on the chart using autopct.\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Data\n",
     "labels = ['Python', 'Java', 'C++', 'JavaScript']\n",
     "sizes = [40, 25, 20, 15]\n",
-    "colors = ['blue', 'red', 'green', 'purple']  # Custom colors\n",
     "\n",
-    "# Create pie chart\n",
-    "plt.pie(sizes, labels=labels, autopct='%1.1f%%', colors=colors, startangle=140)\n",
+    "try:\n",
+    "    if len(labels) != len(sizes):\n",
+    "        raise ValueError(\"Labels and sizes must have the same length\")\n",
+    "    if sum(sizes) == 0:\n",
+    "        raise ValueError(\"Sizes must not sum to zero\")\n",
     "\n",
-    "# Customizations\n",
-    "plt.title(\"Programming Language Usage\")  # Add title\n",
+    "    # Create pie chart\n",
+    "    plt.pie(sizes, labels=labels, autopct='%1.1f%%', colors=['blue', 'red', 'green', 'purple'], startangle=140)\n",
     "\n",
-    "# Show the plot\n",
-    "plt.show()\n"
+    "    # Customizations\n",
+    "    plt.title(\"Programming Language Usage\")\n",
+    "\n",
+    "    # Show the plot\n",
+    "    plt.show()\n",
+    "except Exception as e:\n",
+    "    print(f\"Error: {e}\")\n"
    ]
   }
  ],
